--- a/static/css/style.css
+++ b/static/css/style.css
@@ -240,3 +240,34 @@ kodqr > img {
     font-size: 3vw;
 }
 
+.sel {
+    border: 4px solid #00aadd !important;
+}
+
+printus {
+    display: none;
+    margin: 0;
+    padding: 0;
+    page-break-inside: avoid;
+    width: 100%;
+    min-height: 100vh;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: min(5vw, 5vh);
+}
+
+
+.primg {
+    max-width: 95vw;
+    max-height: 95vh;
+    flex-grow: 1;
+}
+
+@media print {
+    widok_strony {
+        display: none;
+    }
+    printus {
+        display: flex;
+    }
+}
